--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -13,7 +13,7 @@ svg {
 html,
 body {
   font-family: 'Oswald Bold', sans-serif;
-  text-transform: uppercase;
+
 }
 
 .texto-sombra-padrao {
@@ -27,4 +27,32 @@ body {
     -2px 2px #000,
     2px -2px #000,
     calc(-1 * var(--mouse-shadow)) var(--mouse-shadow) #000;
+}
+
+/* .fascinate-inline-regular {
+  font-family: "Fascinate Inline", system-ui;
+  font-weight: 400;
+  font-style: normal;
+} */
+.fascinate-inline-regular {
+  font-family: 'Oswald Bold', sans-serif;
+}
+
+
+.merriweather-body{
+  font-family: "Merriweather", serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
+/* .limelight-regular {
+  font-family: "Limelight", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+} */
+.limelight-regular {
+   font-family: 'Oswald Bold', sans-serif;
 }
